# CrewAI-Streamlit-sample

./: README.md  pyproject.toml  report.md  requirements.txt  streamlit_app.py
.streamlit/: config.toml
src/quick_research/: __init__.py  crew.py  main.py
