[project]
name = "quick_research"
version = "0.1.0"
description = "quick_research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]


[project.scripts]
quick_research = "quick_research.main:run"
run_crew = "quick_research.main:run"
train = "quick_research.main:train"
replay = "quick_research.main:replay"
test = "quick_research.main:test"


[tool.poetry]
name = "quick_research"
version = "0.1.0"
description = "CrewAI + Streamlit demo"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
crewai = "0.122.0"
streamlit = "1.45.0"
openai = "1.26.0"
pydantic = "2.8.1"
# Install modern SQLite runtime only on Linux build images (e.g. Streamlit Cloud)
pysqlite3-binary = { version = "^0.5.4", markers = "sys_platform == 'linux'" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
